--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ scipy==1.12.0
 seaborn==0.13.2
 selenium==4.17.2
 shap==0.44.0
-tensorflow_macos==2.12.0
+tensorflow
 torch==2.1.1
 torchvision==0.16.1
 tqdm==4.65.0
